0.7.1
 - fix: handle connection errors on startup when no internet connection
   is available (#34)
 - fix: simplify error messages on connection errors in UI
 - enh: do not re-download already-downloaded resources (#31)
0.7.0
 - feat: implement download manager
 - feat: rename first tab to "Find Data" and allow searching for
   private datasets
 - fix: perform sanity checks for datasets (#27)
 - enh: allow to download all resources of a collection (#13)
 - enh: implement search for packages the user has access to
 - enh: implement DBInterrogator functions for generating a private
   user db (partly #5)
 - setup: bump dclab from 0.35.3 to 0.35.6
 - ref: simplify `dbmodel` submodule (just use Interrogator)
 - ref: expand dedicated `api` submodule (moved functions from
   `upload.dataset`)
 - ref: introduce dedicated `common` submodule
 - ref: introduce dedicated `worker` submodule for `KThread` and`Daemon`
0.6.4
 - enh: automatically respwan job tasks on connection errors (#26)
 - enh: allow to abort the "compress" step of a job
 - enh: when loading upload tasks that have already been loaded
   before, tell the user how many there were
0.6.3
 - setup: bump dclab from 0.35.0 to 0.35.3
0.6.2
 - enh: show correct upload speed if some resources were uploaded in
   a previous session
 - fix: set job.state to "error" if the daemon encountered one
 - fix: catch ConnectionError in update_job_status
0.6.1
 - fix: handle exceptions in Daemon threads
 - fix: display all resources of a dataset for which the SHA256
   check failed (opposed to just the first)
 - setup: bump dclab from 0.34.6 to 0.35.0
0.6.0
 - feat: search and browse public data on a DCOR instance
 - feat: drag resources in data browser to Shape-Out 2.7.0
   (partially #1)
 - setup: bump dclab from 0.34.4 to 0.34.6
0.5.11
 - fix: KeyError when checking for existence of resource (#24)
 - enh: drag&drop files to manual upload dialog (#23)
 - enh: set upload rate refresh interval to >3s (#22)